--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 }
 </script>
 </head>
-  <body class="bg-gray-900">
+  <body class="bg-gray-900 text-white">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
